2006-Nov-12  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a small graphics bug in monitor that extended the device label
	  a bit too far only when the last channel was drawn on the next line.

2006-Nov-12  Heikki Junnila <hjunnila@users.sf.net>
	* Changed device manager to use themed colors in device info
	* Changed the X gap between two channels in monitor from 5px to 10px
	* Removed channel variables from monitor

2006-Nov-09  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed monitor to display device labels on as many rows as necessary.

2006-Oct-29  Heikki Junnila <hjunnila@users.sf.net>
	* Promoted version to 2.6.0
	* Changed the version number to be taken from the version parameter
	  given in configure.in.

2006-Oct-29  Heikki Junnila <hjunnila@users.sf.net>
	* Changed the DMX monitor to show all channels from the first universe
	  (rest of the universes to follow later). 
	* Monitor saves its position & size
	* Monitor displays devices over their channels, but there is a bug
	  that doesn't draw the device rectangle to a second row.

2006-Oct-28  Heikki Junnila <hjunnila@users.sf.net>
	* Added a preset menu button to console channel

2006-Oct-28  Heikki Junnila <hjunnila@users.sf.net>
	* Added address column to device manager
	* Added capability to create multiple devices at once.
	* Improved Doc::newDevice() so that the device is not created
	  at all if parameters are not correct. Previously it was created
	  and then destroyed if parameters were incorrect..

2006-Oct-27  Heikki Junnila <hjunnila@users.sf.net>
	* Created a bigger application icon (Q.png)

2006-Oct-27  Heikki Junnila <hjunnila@users.sf.net>
	* Chaser & collection editors work a bit faster now that the function-
	  manager pops up again after an item has been added. This speeds up
	  inserting multiple steps.

2006-Oct-27  Heikki Junnila <hjunnila@users.sf.net>
	* Added Eurolite-LED-PAR56.deviceclass
	* Fixed a deadlock with collection creation in functionmanager